[metadata]
name = compsoc
version = 0.3.2
author =
author_email =
url = https://github.com/raviq/compsoc
license = GNU
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages =
    compsoc
    compsoc.voting_rules
install_requires =
    Pandas
    Numpy
    tqdm
    Matplotlib
    scipy

[project_urls]
bug_tracker = https://github.com/raviq/compsoc/issues
